@@ -1,4 +1,9 @@
-/* $Id: ChangeLog,v 1.2747 2004-12-06 19:42:44 sao2l02 Exp $ */
+/* $Id: ChangeLog,v 1.2748 2004-12-07 20:12:36 sao2l02 Exp $ */
+2004-12-07: Dietrich Teickner <dietrich_teickner@arcor   >
+    - Kernel32: o \include\win\thread.h,
+                  \src\kernel32\dbglog.cpp,src\kernel32\wprocess.cpp
+                  Extend the debug-TEB with a pointer to the debugstr_data structure.
+                  This should solved the memory problems, which Sander v.L. means.
 2004-12-06: Dietrich Teickner <dietrich_teickner@arcor   >
     - Kernel32: o src\kernel32\hmthread.cpp,src/kernel32/wprocess.cpp
                   Never remove the current TEB with the destroy
